--- a/crime_app/pubspec.yaml
+++ b/crime_app/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  firebase_auth: ^3.3.20
+  firebase_core: ^1.18.0
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.5+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
