--- a/crime_app/pubspec.yaml
+++ b/crime_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^1.18.0
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
+  location: ^4.4.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
