--- a/crime_app/pubspec.yaml
+++ b/crime_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
   location: ^4.4.0
+  http: ^0.13.4
   
 dev_dependencies:
   flutter_test:
