--- a/crime_app/pubspec.yaml
+++ b/crime_app/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
   location: ^4.4.0
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,10 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: KaushanScript
+      fonts:
+        - asset: assets/fonts/KaushanScript-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
