--- a/crime_app/pubspec.yaml
+++ b/crime_app/pubspec.yaml
@@ -81,6 +81,10 @@ flutter:
     - family: KaushanScript
       fonts:
         - asset: assets/fonts/KaushanScript-Regular.ttf
+
+    - family: Libre
+      fonts:
+        - asset: assets/fonts/LibreBaskerville-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
